# blp-ui

./: .gitignore  Cargo.toml  README.md  build-only.sh  build-publish.sh  build-settings.sh  build.rs  rustfmt.toml
assets/locales/en/: core.ftl
assets/locales/ru/: core.ftl
assets/locales/tc/: core.ftl
assets/locales/uk/: core.ftl
assets/locales/zh/: core.ftl
preview/: PROMPT.md
src/: main.rs  paint_bg_maze.rs  run.rs
src/app/: app.rs  fonts.rs  mod.rs  update.rs
src/error/: mod.rs  ui_error.rs
src/ext/path/: ensure_readable.rs  mod.rs  to_abs_string_with_macros.rs
src/ui/: fonts.rs  mod.rs
src/ui/i18n/: detect_os_lang.rs  i18n.rs  lng_list.rs  mod.rs  prefs.rs  shortcut.rs
src/ui/viewer/: app.rs  mod.rs  run_native.rs  update.rs
src/ui/viewer/layout/: draw_spinner.rs  footer.rs  mod.rs  panel_center.rs  panel_left.rs  panel_right.rs  resize_corner_br.rs  title_bar.rs
src/ui/viewer/layout/file_picker/: all_image_exts.rs  draw_file_picker.rs  file_dialog_open.rs  file_pick_input.rs  hotkey_pressed.rs  macos_paste_event.rs  mod.rs  pick_from_clipboard.rs  pick_from_file.rs  poll_decoder.rs
src/ui/viewer/layout/file_saver/: export_quality.rs  file_saver.rs  last_safe_dir.rs  mod.rs  save_same_dir.rs
src/ui/viewer/theme/: apply_style.rs  mod.rs  paint_bg_neon_maze.rs
src/ui/widget/: mod.rs  text_edit_ex.rs
tests/: run-cli.sh  run-ui-cli.sh  run-ui.sh  scan_header.rs  scan_patched.rs  to_blp.rs
