[package]
name = "blp"
description = "Blizzard BLP image format reader/writer (Warcraft/World of Warcraft textures)"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
version = "0.1.37"
repository = "https://github.com/WarRaft/blp-ui"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", optional = true }
byteorder = "1.5.0"
clap = { version = "4.5.49", features = ["derive"], optional = true }
confy = { version = "2.0.0", optional = true }
directories = { version = "6.0.0", optional = true }
dunce = { version = "1.0.5" }
eframe = { version = "0.33.0", features = ["wgpu", "persistence"], optional = true }
fluent-templates = "0.13.1"
hex = "0.4.3"
image = { version = "0.25.8", features = [
    "avif", # AVIF format support (modern codec based on AV1)
    "bmp", # BMP format support (Windows Bitmap)
    "dds", # DDS format support (DirectDraw Surface, often used in games)
    "default", # Enables the default feature set (common formats like PNG, JPEG, GIF, etc.)
    "default-formats", # Convenience feature to include the basic built-in formats
    "exr", # OpenEXR format support (HDR images, film/VFX industry)
    "gif", # GIF format support (animated or static)
    "hdr", # Radiance HDR format support (high dynamic range images)
    "ico", # ICO format support (Windows icon files)
    "jpeg", # JPEG format support (most common photo format)
    "png", # PNG format support (lossless images with alpha channel)
    "pnm", # PNM format support (Portable AnyMap: PBM, PGM, PPM)
    "qoi", # QOI format support (Quite OK Image, lightweight lossless format)
    "rayon", # Multi-threaded processing via Rayon (faster decoding/encoding)
    "tga", # TGA format support (Targa, common in old games)
    "tiff", # TIFF format support (Tagged Image File Format, used in photography/scans)
    "webp", # WebP format support (modern web image format)
] }

jpeg-decoder = "0.3.2"
normpath = "1.4.0"
psd = "0.3.3"
num_enum = "0.7.4"
path-absolutize = "3.1.1"
rfd = { version = "0.15.4", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha1 = "0.11.0-rc.2"
sys-locale = { version = "0.3.2", optional = true }
turbojpeg = "1.3.3"
walkdir = "2.5.0"
chrono = "0.4.42"

[package.metadata.bundle]
name = "blp"
identifier = "com.warraft.blprs"
category = "public.app-category.developer-tools"
short_description = "BLP viewer/encoder"
long_description = "Fast BLP1/BLP2 viewer & tools"
# macOS-специфика:
osx_minimum_system_version = "10.13"
# Указываем СГЕНЕРЁННЫЕ файлы/глоб — и бандлер будет счастлив
icon = [
    "assets/generated/AppIcon.icns", # macOS
    "assets/generated/app.ico", # Windows
    "assets/generated/icons/hicolor/*/apps/*.png"    # Linux (hicolor)
]

[build-dependencies]
image = "0.25.8"
chrono = "0.4.42"
ico = "0.4.0"
winresource = "0.1.23"
icns = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.1"

[profile.release]
lto = "thin"        # LTO включено только для финальной сборки
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"
[features]
default = []
cli = ["dep:clap"]
ui = [
    "dep:arboard",
    "dep:confy",
    "dep:directories",
    "dep:eframe",
    "dep:rfd",
    "dep:serde",
    "dep:sys-locale",
]
