[package]
name = "blp-ui"
description = "Blizzard BLP image format reader/writer (Warcraft/World of Warcraft textures)"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
version = "0.2.0"
repository = "https://github.com/WarRaft/blp-ui"
edition = "2024"

[dependencies]
blp = { path = "../blp-rs" }
arboard = "3.6.1"
confy = "2.0.0"
directories = "6.0.0"
dunce = "1.0.5"
eframe = { version = "0.33.0", features = ["wgpu", "persistence"] }
fluent-templates = "0.13.1"
normpath = "1.4.0"
num_enum = "0.7.4"
path-absolutize = "3.1.1"
rfd = { version = "0.15.4" }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0-rc.2"
sys-locale = "0.3.2"
walkdir = "2.5.0"
chrono = "0.4.42"

[package.metadata.bundle]
name = "blp"
identifier = "com.warraft.blprs"
category = "public.app-category.developer-tools"
short_description = "BLP viewer/encoder"
long_description = "Fast BLP1/BLP2 viewer & tools"
# macOS-специфика:
osx_minimum_system_version = "10.13"
# Указываем СГЕНЕРЁННЫЕ файлы/глоб — и бандлер будет счастлив
icon = [
    "assets/generated/AppIcon.icns", # macOS
    "assets/generated/app.ico", # Windows
    "assets/generated/icons/hicolor/*/apps/*.png"    # Linux (hicolor)
]

[build-dependencies]
image = "0.25.8"
chrono = "0.4.42"
ico = "0.4.0"
winresource = "0.1.23"
icns = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.1"

[profile.release]
lto = "thin"        # LTO включено только для финальной сборки
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"
